added section top__slider

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,78 @@
     </div>
   </header>
 
-<main class="main"></main>
+  <main class="main">
+    <section class="top__slider">
+      <div class="container top__slider-container">
+        <div class="top__slider-inner">
+          <div class="top__slider-item">
+            <div class="top__slider-content">
+              <h3 class="top__slider-title">
+                New Season <br>
+                New Brand Collection
+              </h3>
+              <p class="top__slider-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top__slider-link" href="#">
+                BUY NOW
+              </a>
+            </div>
+            <img class="top__slider-img" src="images/slider/foto.png" alt="foto">
+          </div>
+          <div class="top__slider-item">
+            <div class="top__slider-content">
+              <h3 class="top__slider-title">
+                New Season<br>
+                New Brand Collection
+              </h3>
+              <p class="top__slider-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top__slider-link" href="#">
+                BUY NOW
+              </a>
+            </div>
+            <img class="top__slider-img" src="images/slider/foto.png" alt="foto">
+          </div>
+          <div class="top__slider-item">
+            <div class="top__slider-content">
+              <h3 class="top__slider-title">
+                New Season<br>
+                New Brand Collection
+              </h3>
+              <p class="top__slider-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top__slider-link" href="#">
+                BUY NOW
+              </a>
+            </div>
+            <img class="top__slider-img" src="images/slider/foto.png" alt="foto">
+          </div>
+          <div class="top__slider-item">
+            <div class="top__slider-content">
+              <h3 class="top__slider-title">
+                New Season<br>
+                New Brand Collection
+              </h3>
+              <p class="top__slider-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top__slider-link" href="#">
+                BUY NOW
+              </a>
+            </div>
+            <img class="top__slider-img" src="images/slider/foto.png" alt="foto">
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
 
   <footer class="footer">
