adeed video fashion section

--- a/app/index.html
+++ b/app/index.html
@@ -199,6 +199,33 @@
         </div>
       </div>
     </section>
+    <section class="video__fachion">
+      <div class="container">
+        <div class="video__fachion-inner">
+          <div class="video__fachion-popup" style="background-image: url(images/video_fachion.jpg);">
+            <a class="video__fachion-play" data-fancybox href="https://www.youtube.com/watch?v=ZEjvHPk47AM">
+              <img src="images/icons/play-btn.svg" alt="video play button">
+            </a>
+          </div>
+          <div class="video__fachion-contant">
+            <p class="video__fachion-subtitle">
+              Winter Collection 20% Off
+            </p>
+            <h3 class="title video__fachion-title">
+              TRENDING FASHION
+            </h3>
+            <p class="video__fachion-text">
+              Lorem ipsum dolor sit amet, consectetur apiscing elit, sed do eiusmod temp incididunt ut labore et dolore
+              magna aliqua
+              consectetur adipiscing elit, sedu do eiusmod temp indidunt ut labore et dolore magna aliqua.. Quis ipsum de
+              ultcesm.
+              Risus commodo viverra maecenas.
+            </p>
+            <a class="video__fachion-link" href="#">View Now</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
