added promo added partners

--- a/app/index.html
+++ b/app/index.html
@@ -235,7 +235,8 @@
           TRENDING PRODUCTS
         </h3>
         <p class="product__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod- <br> moe tempor incididunt ut labore et dolore aliqua.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod- <br> moe tempor incididunt ut labore
+          et dolore aliqua.
         </p>
         <div class="product__items">
           <div class="product__item">
@@ -394,7 +395,7 @@
                 </a>
               </div>
             </div>
-            <div class="star"  data-rateyo-rating="2.5"></div>
+            <div class="star" data-rateyo-rating="2.5"></div>
             <h4 class="product__item-title">
               White Polo Men’s T-Shirt
             </h4>
@@ -403,7 +404,7 @@
               <div class="product__item-old-price">$27.00</div>
             </div>
           </div>
-          
+
           <div class="product__item product__item--sale">
             <div class="product__item-img-box">
               <img class="product__item-image" src="images/product/6.jpg" alt="product">
@@ -441,6 +442,57 @@
         <a class="product__link" href="#">LOAD MORE</a>
       </div>
     </section>
+    <div class="promo">
+      <div class="container">
+        <div class="promo__inner">
+          <p class="promo__subtitle">Style Fashion</p>
+          <h3 class="title">DEAL OF THE DAY</h3>
+          <div class="promo__clock" data-time="2023-09-22">
+            <div class="promo__clock-item">
+              <span class="promo__days"></span>
+              <div class="promo__text">Days</div>
+            </div>
+            <div class="promo__clock-item">
+              <span class="promo__hours"></span>
+              <div class="promo__text">Hours</div>
+            </div>
+            <div class="promo__clock-item">
+            <span class="promo__minutes"></span>
+            <div class="promo__text">Minutes</div>
+            </div>
+            <div class="promo__clock-item">
+            <span class="promo__seconds"></span>
+            <div class="promo__text">Seconds</div>
+            </div>
+          </div>
+          <a class="promo__link" href="#">SHOP NOW</a>
+        </div>
+      </div>
+    </div>
+    <div class="partners">
+      <div class="container">
+        <ul class="partners__list">
+          <li class="pertners__item">
+            <img class="pertners__item-img" src="images/partners/1.png" alt="partner logo">
+          </li>
+          <li class="pertners__item">
+            <img class="pertners__item-img" src="images/partners/2.png" alt="partner logo">
+          </li>
+          <li class="pertners__item">
+            <img class="pertners__item-img" src="images/partners/3.png" alt="partner logo">
+          </li>
+          <li class="pertners__item">
+            <img class="pertners__item-img" src="images/partners/4.png" alt="partner logo">
+          </li>
+          <li class="pertners__item">
+            <img class="pertners__item-img" src="images/partners/5.png" alt="partner logo">
+          </li>
+          <li class="pertners__item">
+            <img class="pertners__item-img" src="images/partners/6.png" alt="partner logo">
+          </li>
+        </ul>
+      </div>
+    </div>
   </main>
   <footer class="footer">
     <div class="container">
