added blog section

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>MARCHO</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -457,12 +457,12 @@
               <div class="promo__text">Hours</div>
             </div>
             <div class="promo__clock-item">
-            <span class="promo__minutes"></span>
-            <div class="promo__text">Minutes</div>
+              <span class="promo__minutes"></span>
+              <div class="promo__text">Minutes</div>
             </div>
             <div class="promo__clock-item">
-            <span class="promo__seconds"></span>
-            <div class="promo__text">Seconds</div>
+              <span class="promo__seconds"></span>
+              <div class="promo__text">Seconds</div>
             </div>
           </div>
           <a class="promo__link" href="#">SHOP NOW</a>
@@ -493,6 +493,81 @@
         </ul>
       </div>
     </div>
+    <section class="blog">
+      <div class="container">
+        <h3 class="title">From Our Blog</h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodmoe tempor incididunt ut labore et
+          dolore aliqua.
+        </p>
+        <div class="blog__items">
+          <div class="blog__item">
+            <a class="blog__item-imglink">
+              <img class="blog__item-img" src="images/blog/Image1.jpg" alt="blog image" class="blog__item-img">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-autor" href="#">
+                  By Admin
+                </a>
+                <div class="blog__item-dete" href="#">
+                  10 January, 2020
+                </div>
+              </div>
+              <h4 class="blog__item-title">
+                <a class="blog__item-titlelink" href="#">
+                  Our Apps User Use Mobile On His Mobile
+                </a>
+              </h4>
+              <a class="blog__item-link" href="#">Read More</a>
+            </div>
+          </div>
+          <div class="blog__item">
+            <a class="blog__item-imglink">
+              <img class="blog__item-img" src="images/blog/Image2.jpg" alt="blog image" class="blog__item-img">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-autor" href="#">
+                  By Admin
+                </a>
+                <div class="blog__item-dete" href="#">
+                  10 January, 2020
+                </div>
+              </div>
+              <h4 class="blog__item-title">
+                <a class="blog__item-titlelink" href="#">
+                  Our Apps User Use Mobile On His Mobile
+                </a>
+              </h4>
+              <a class="blog__item-link" href="#">Read More</a>
+            </div>
+          </div>
+          <div class="blog__item">
+            <a class="blog__item-imglink">
+              <img class="blog__item-img" src="images/blog/Image3.jpg" alt="blog image" class="blog__item-img">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-autor" href="#">
+                  By Admin
+                </a>
+                <div class="blog__item-dete" href="#">
+                  10 January, 2020
+                </div>
+              </div>
+              <h4 class="blog__item-title">
+                <a class="blog__item-titlelink" href="#">
+                  Our Apps User Use Mobile On His Mobile
+                </a>
+              </h4>
+              <a class="blog__item-link" href="#">Read More</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
