added shop page

--- a/app/index.html
+++ b/app/index.html
@@ -263,13 +263,23 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product__item-title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product__item-price">
-              <div class="product__item-new-price">$34.00</div>
-              <div class="product__item-old-price">$27.00</div>
+            <div class="product__item-wrapper-box">
+              <div class="product__item-box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product__item-title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product__item-price">
+                  <div class="product__item-new-price">$34.00</div>
+                  <div class="product__item-old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product__item-content-box">
+                <p class="product__item-text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product__item-btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product__item product__item--sale">
@@ -296,13 +306,23 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4.8"></div>
-            <h4 class="product__item-title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product__item-price">
-              <div class="product__item-new-price">$34.00</div>
-              <div class="product__item-old-price">$27.00</div>
+            <div class="product__item-wrapper-box">
+              <div class="product__item-box">
+                <div class="star" data-rateyo-rating="4.8"></div>
+                <h4 class="product__item-title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product__item-price">
+                  <div class="product__item-new-price">$34.00</div>
+                  <div class="product__item-old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product__item-content-box">
+                <p class="product__item-text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product__item-btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product__item">
@@ -329,13 +349,23 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="3.3"></div>
-            <h4 class="product__item-title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product__item-price">
-              <div class="product__item-new-price">$34.00</div>
-              <div class="product__item-old-price">$27.00</div>
+            <div class="product__item-wrapper-box">
+              <div class="product__item-box">
+                <div class="star" data-rateyo-rating="3.3"></div>
+                <h4 class="product__item-title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product__item-price">
+                  <div class="product__item-new-price">$34.00</div>
+                  <div class="product__item-old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product__item-content-box">
+                <p class="product__item-text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product__item-btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product__item product__item--sale">
@@ -362,13 +392,23 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="1"></div>
-            <h4 class="product__item-title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product__item-price">
-              <div class="product__item-new-price">$34.00</div>
-              <div class="product__item-old-price">$27.00</div>
+            <div class="product__item-wrapper-box">
+              <div class="product__item-box">
+                <div class="star" data-rateyo-rating="1"></div>
+                <h4 class="product__item-title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product__item-price">
+                  <div class="product__item-new-price">$34.00</div>
+                  <div class="product__item-old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product__item-content-box">
+                <p class="product__item-text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product__item-btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product__item">
@@ -395,13 +435,23 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="2.5"></div>
-            <h4 class="product__item-title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product__item-price">
-              <div class="product__item-new-price">$34.00</div>
-              <div class="product__item-old-price">$27.00</div>
+            <div class="product__item-wrapper-box">
+              <div class="product__item-box">
+                <div class="star" data-rateyo-rating="2.5"></div>
+                <h4 class="product__item-title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product__item-price">
+                  <div class="product__item-new-price">$34.00</div>
+                  <div class="product__item-old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product__item-content-box">
+                <p class="product__item-text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product__item-btn">Add to cart</button>
+              </div>
             </div>
           </div>
 
@@ -429,13 +479,23 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product__item-title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product__item-price">
-              <div class="product__item-new-price">$34.00</div>
-              <div class="product__item-old-price">$27.00</div>
+            <div class="product__item-wrapper-box">
+              <div class="product__item-box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product__item-title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product__item-price">
+                  <div class="product__item-new-price">$34.00</div>
+                  <div class="product__item-old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product__item-content-box">
+                <p class="product__item-text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product__item-btn">Add to cart</button>
+              </div>
             </div>
           </div>
         </div>
